--- a/pages/styles/std.css
+++ b/pages/styles/std.css
@@ -1,4 +1,4 @@
-/* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
+w/* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
 html {
     box-sizing: border-box
 }
