--- a/pages/styles/init.css
+++ b/pages/styles/init.css
@@ -1,131 +1,298 @@
-/* Init.css Basic Frame HTML Portfolio */
+/* General Styles */
 
-/* DIV BASIC */
+/* Reset default margin and padding */
+html, body {
+    margin: 0;
+    padding: 0;
+}
 
-	html, body {
+/* Common text styles */
+body {
+    color: #161212;
+    font: 90% Roboto, Arial, sans-serif;
+    font-weight: 300;
+}
+
+p {
+    padding: 0 10px;
+    line-height: 1.8;
+	border: 2px solid whitesmoke;
+}
+
+ul li {
+    padding-right: 10px;
+    line-height: 1.6;
+}
+
+h3 {
+    padding: 5px 20px;
+    margin: 0;
+}
+
+/* Background Image */
+div#filig {
+    background-image: url('img_hello_world.jpeg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 50%;
+}
+
+
+/* ... your existing CSS rules ... */
+
+/* Header Styles */
+div#header {
+	background: #304d35;
+    padding-left: 200px;
+    position: relative;
+    min-height: 110px; /* Add this line to set a minimum height for the header */
+	border: 2px solid red;
+}
+
+div#header h1 {
+    height: 60px;
+    line-height: 80px;
+    margin: 0;
+    padding-left: 100px;
+    background: #304d35;
+    color: #dff5f1;
+}
+
+div#header a {
+    position: absolute;
+    right: 0;
+    top: 23px;
+    padding: 10px;
+    color: rgb(220, 220, 245);
+}
+
+
+
+/* Coordinates Box Styles */
+div#coords-box {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    /* background-color: #147FA9; */
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    border-radius: 5px;
+	border: 2px solid pink;
+    /* Hériter des propriétés du header */
+    min-height: inherit;
+    padding-left: inherit;
+}
+div#header-pic { 
+	position: absolute;
+    top: 0px;
+    right: 10px;
+	background: #58a848;
+    float: left; 
+    width: 200px; 
+    margin-left: -100%;
+	border: 2px solid darkgoldenrod; 
+
+
+}
+
+/* Navigation Styles */
+div#navigation {
+    background: #58a848;
+    float: left;
+    width: 200px;
+    margin-left: -100%;
+	border: 2px solid darkgoldenrod;
+}
+
+div#navigation li {
+    list-style: none;
+}
+
+div#navigation img {
+    padding: 20px;
+}
+
+/* Footer Styles */
+div#footer {
+    background: #575a65;
+    color: #d8cdcd;
+}
+
+div#footer p {
+    padding: 20px 10px;
+}
+
+/* Specific Styles */
+div#wrapper {
+    float: left;
+    width: 100%;
+}
+
+div#spec {
+    font-family: courier;
+    font-size: 160%;
+    color: red;
+}
+
+div#content {
+    margin-left: 200px;
+    overflow: auto;
+    max-height: calc(100vh - 60px);
+	border: 2px solid blue;
+}
+
+div#content p {
+    margin-left: 120px;
+    padding: 0 10px;
+    line-height: 1.8;
+}
+
+div#extra {
+    background: #4f5250;
+    clear: left;
+    width: 100%;
+    color: rgb(250, 252, 250);
+	border: 2px solid yellow;
+}
+
+div#menu {
+    background: #caccd5;
+    color: #147FA9;
+	border: 2px solid purple;
+}
+
+
+  /* Init.css Basic Frame HTML Portfolio */
+
+	/* DIV BASIC */
+
+		/* html, body {
+			margin: 0;
+			padding: 0;
+		}
+
+		body {
+			color: #161212;
+			font: 90% Roboto, Arial, sans-serif;
+			font-weight: 300;
+		}
+
+		p {
+			padding: 0 10px;
+			line-height: 1.8;
+		}
+
+		ul li {
+			padding-right: 10px;
+			line-height: 1.6;
+		}
+
+		h3 {
+			padding: 5px 20px;
+			margin: 0;
+		}
+
+		div#filig {
+		background-image: url('img_hello_world.jpeg');
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-size: 100% 50%;
+		} */
+
+	/*    DIV STANDARD   */
+	/* 
+		div#header {
+			padding-left: 200px;
+			position: relative;
+		}
+
+		div#header h1 {
+		height: 60px;
+		line-height: 80px;
 		margin: 0;
-		padding: 0;
-	}
+		padding-left: 100px;
+		background: #304d35;
+		color: #dff5f1;
+		}
 
-	body {
-		color: #161212;
-		font: 90% Roboto, Arial, sans-serif;
-		font-weight: 300;
-	}
+		div#header a {
+		position: absolute;
+		right: 0;
+		top: 23px;
+		padding: 10px;
+		color: rgb(220, 220, 245);
+		} */
+	/*    DIV     NAV     */
 
-	p {
+		/* div#navigation {
+		background: #58a848;
+		}
+
+		div#navigation li {
+		list-style: none;
+		}
+
+		div#navigation {
+		float: left;
+		width: 200px;
+		margin-left: -100%;
+		}
+
+		div#navigation img {
+		padding: 20px;
+		}
+	*/
+
+	/*    DIV     FOOTER     */
+
+		/* div#footer {
+		background: #575a65;
+		color: #d8cdcd;
+		}
+
+		div#footer p {
+		padding: 20px 10px;
+		}
+	*/
+
+	/*    DIV    SPEC    */
+
+	/* 
+		div#wrapper {
+		float: left;
+		width: 100%;
+		}
+
+		div#spec {
+		font-family: courier;
+		font-size: 160%;
+		color:red;
+
+		}
+
+		div#content {
+		margin-left: 200px;
+		}
+
+		div#content p {
+		margin-left: 120px;
 		padding: 0 10px;
 		line-height: 1.8;
-	}
+		}
 
-	ul li {
-		padding-right: 10px;
-		line-height: 1.6;
-	}
+		div#extra {
+		background: #4f5250;
+		clear: left;
+		width: 100%;
+		color:rgb(250, 252, 250);
+		}
 
-	h3 {
-		padding: 5px 20px;
-		margin: 0;
-	}
+		
+		div#menu {
+		background: #caccd5;
+		color: #147FA9;
 
-	div#filig {
-	background-image: url('img_hello_world.jpeg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: 100% 50%;
-	}
-
-/*    DIV STANDARD   */
-
-    div#header {
-		padding-left: 200px;
-      	position: relative;
-    }
-
-    div#header h1 {
-      height: 60px;
-      line-height: 80px;
-      margin: 0;
-      padding-left: 100px;
-      background: #304d35;
-      color: #dff5f1;
-    }
-
-    div#header a {
-      position: absolute;
-      right: 0;
-      top: 23px;
-      padding: 10px;
-      color: rgb(220, 220, 245);
-    }
-/*    DIV     NAV     */
-
-    div#navigation {
-      background: #58a848;
-    }
-
-    div#navigation li {
-      list-style: none;
-    }
-
-    div#navigation {
-      float: left;
-      width: 200px;
-      margin-left: -100%;
-    }
-
-    div#navigation img {
-      padding: 20px;
-    }
-
-
-/*    DIV     FOOTER     */
-
-	div#footer {
-	background: #575a65;
-	color: #d8cdcd;
-	}
-
-	div#footer p {
-	padding: 20px 10px;
-	}
-
-
-/*    DIV    SPEC    */
-
-
-	div#wrapper {
-	float: left;
-	width: 100%;
-	}
-
-	div#spec {
-	font-family: courier;
-	font-size: 160%;
-	color:red;
-
-	}
-
-	div#content {
-	margin-left: 200px;
-	}
-
-	div#content p {
-	margin-left: 120px;
-	padding: 0 10px;
-	line-height: 1.8;
-	}
-
-	div#extra {
-	background: #4f5250;
-	clear: left;
-	width: 100%;
-	color:rgb(250, 252, 250);
-	}
-
-	
-	div#menu {
-	background: #caccd5;
-	color: #147FA9;
-
-	}
+		} */
