--- a/pages/styles/init.css
+++ b/pages/styles/init.css
@@ -1,6 +1,6 @@
 /* General Styles */
 
-/* Reset default margin and padding */
+	/* Reset default margin and padding */
 html, body {
     margin: 0;
     padding: 0;
@@ -37,41 +37,85 @@ div#filig {
     background-size: 100% 50%;
 }
 
+/* 			RENAME PROCESS HEADER >> TOP	*/
+
+
+div#top {
+	background: #304d35;
+    /* padding-left: 200px; */
+    position: relative;
+    min-height: 110px; /* Add this line to set a minimum height for the header */
+	border: 2px solid red;
+	
+		width: 100%;
+		float: left;
+		padding: 10px;
+}
+
+
+
+/*  */
+
+div#pan {
+    background: #58a848;
+    float: left;
+    min-width: 200px;
+	width: 33.33%;
+    margin-left: -100%;
+	border: 2px solid darkgoldenrod;
+}
 
 /* ... your existing CSS rules ... */
 
 /* Header Styles */
 div#header {
 	background: #304d35;
-    padding-left: 200px;
-    position: relative;
-    min-height: 110px; /* Add this line to set a minimum height for the header */
+    /* padding-left: 200px; */
+    /* position: relative; */
+    min-height: 100px; /* Add this line to set a minimum height for the header */
 	border: 2px solid red;
 }
 
-div#header h1 {
-    height: 60px;
-    line-height: 80px;
-    margin: 0;
-    padding-left: 100px;
-    background: #304d35;
-    color: #dff5f1;
+
+div#header-pic { 
+	position: absolute;
+	/* top: 100px; */
+	/* z-index: 3;` */
+	right: 10px;
+	background: #58a848;
+	float: left; 
+	/* width: 200px;  */
+	/* margin-left: - 100%; */
+	border: 2px solid darkgoldenrod; 
+	
 }
 
+
+div#header-name {
+	position: absolute;
+	height: 60px;
+	/* height: 80px; */
+	left: 200px;
+	/* z-index: 1; */
+	/*  */
+	/* padding-left: 200px; */
+	margin: 0;
+	background: #304d35;
+	color: #dff5f1;
+	border: 2px solid orange;
+}	
 div#header a {
-    position: absolute;
-    right: 0;
-    top: 23px;
-    padding: 10px;
-    color: rgb(220, 220, 245);
+	position: absolute;
+	right: 0;
+	top: 23px;
+	padding: 10px;
+	color: rgb(220, 220, 245);
 }
-
-
 
 /* Coordinates Box Styles */
 div#coords-box {
     position: absolute;
-    top: 0px;
+    top: 60px;
     right: 10px;
     /* background-color: #147FA9; */
     color: #fff;
@@ -85,18 +129,11 @@ div#coords-box {
     min-height: inherit;
     padding-left: inherit;
 }
-div#header-pic { 
-	position: absolute;
-    top: 0px;
-    right: 10px;
-	background: #58a848;
-    float: left; 
-    width: 200px; 
-    margin-left: -100%;
-	border: 2px solid darkgoldenrod; 
 
+/* 
+	Header END
+*/
 
-}
 
 /* Navigation Styles */
 div#navigation {
