--- a/pages/styles/init.css
+++ b/pages/styles/init.css
@@ -4,6 +4,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    max-width: 1024px;
 }
 
 /* Common text styles */
@@ -11,6 +12,7 @@ body {
     color: #161212;
     font: 90% Roboto, Arial, sans-serif;
     font-weight: 300;
+    
 }
 
 p {
@@ -26,7 +28,7 @@ ul li {
 
 h3 {
     padding: 5px 20px;
-    margin: 0;
+    margin: 10;
 }
 
 /* Background Image */
@@ -54,7 +56,7 @@ div#top {
 
 
 div#pan {
-    background: #58a848;
+    background: #dae01c;
     float: left;
     min-width: 200px;
 	width: 33.33%;
@@ -100,13 +102,14 @@ div#header-name {
 	margin: 0;
 	background: #304d35;
 	color: #dff5f1;
-	border: 2px solid orange;
+	/* border: 2px solid orange; */
 }	
 
 
 /* Coordinates Box Styles */
-div#coords-box {
+div#coords{
     position: absolute;
+    float: right; 
     top: 60px;
     right: 10px;
     /* background-color: #147FA9; */
@@ -116,19 +119,52 @@ div#coords-box {
     font-weight: bold;
     font-family: Arial, sans-serif;
     border-radius: 5px;
-	border: 2px solid pink;
+	/* border: 2px solid pink; */
     /* Hériter des propriétés du header */
-    min-height: inherit;
-    padding-left: inherit;
+    /* min-height: inherit;
+    padding-left: inherit; */
 }
+
+div#coords ul  li {
+    font-weight: 30;
+    padding-right: 10px;
+    line-height: 1;
+    border: 2px solid rgb(63, 206, 175);
+}
+div#coords a {
+    list-style: none;
+    text-decoration: none; 
+    color: #fff;
+    /* font-weight: 30;
+    padding-right: 10px;
+    line-height: 1; */
+    border: 2px solid rgb(130, 36, 92);
+}
+
+/* Styles pour les liens non visités */
+/* a {
+    color: #000; /* Couleur du texte des liens non visités (noir dans cet exemple) */
+    /* text-decoration: none; Supprime la soulignement des liens */
+/* } */ */
+
+/* Styles pour les liens visités */
+/* a:visited {
+    color: #800080; Couleur du texte des liens visités (violet foncé dans cet exemple) */
+/* } */
+
+/* Styles pour les liens au survol */
+/* a:hover { */
+    /* color: #FF0000; Couleur du texte des liens au survol (rouge dans cet exemple) */
+/* } */
 
 
 div#header a {
-	position: absolute;
+    list-style: none;
+	/* position: absolute;
 	right: 0;
 	top: 23px;
-	padding: 10px;
-	color: rgb(220, 220, 245);
+	padding: 10px;*/
+	color: rgb(16, 48, 28); 
 }
 
 /* 
@@ -183,9 +219,17 @@ div#content {
 }
 
 div#content p {
-    margin-left: 120px;
+    margin-left: 60px;
     padding: 0 10px;
     line-height: 1.8;
+}
+
+div#pli {
+    margin-left: 80px;
+    font-weight: bold;
+    /* padding: 0 10px; */
+    line-height: 1;
+    font-size: 12px;
 }
 
 div#extra {
