--- a/pages/styles/init.css
+++ b/pages/styles/init.css
@@ -77,7 +77,7 @@ div#pan {
 display: block;
 }  
 
-
+/*  slide itself hide // see */
 .slide {
     display: none;
   }
@@ -85,7 +85,8 @@ display: block;
 .slide-active {
     display: block;
   }
-
+/* alt  */
+.mySlide {display:none;}
   
 
 /* Style for navigation buttons */
