--- a/pages/styles/slideshow.css
+++ b/pages/styles/slideshow.css
@@ -181,9 +181,10 @@
     
     /*         Header END    */
     
-    /* .mySlide {
+    /* .mySlide1 {
         display: none;
     } */
+    
     
     
     /* Navigation Styles */
