--- a/pages/styles/init.css
+++ b/pages/styles/init.css
@@ -7,264 +7,278 @@ html, body {
     max-width: 1024px;
 }
 
+/* MAIN BODY  */
 /* Common text styles */
-body {
-    color: #161212;
-    font: 90% Roboto, Arial, sans-serif;
-    font-weight: 300;
-    
-}
 
-p {
-    padding: 0 10px;
-    line-height: 1.8;
-	border: 2px solid whitesmoke;
-}
+    body {
+        color: #161212;
+        font: 90% Roboto, Arial, sans-serif;
+        font-weight: 300;
+        
+    }
 
-ul li {
-    padding-right: 10px;
-    line-height: 1.6;
-}
+    p {
+        padding: 0 10px;
+        line-height: 1.8;
+        border: 2px solid whitesmoke;
+    }
 
-h3 {
-    padding: 5px 20px;
-    margin: 10;
-}
+    ul li {
+        padding-right: 10px;
+        line-height: 1.6;
+    }
 
-h2 {
-    padding: 5px 20px;
-    margin: 10;
-}
-/* Background Image */
-div#filig {
-    background-image: url('img_hello_world.jpeg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 50%;
-}
+    h3 {
+        padding: 5px 20px;
+        margin: 10;
+    }
+
+    h2 {
+        padding: 5px 20px;
+        margin: 10;
+    }
+    /* Background Image */
+    div#filig {
+        background-image: url('img_hello_world.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 50%;
+    }
+
+
 
 /* 			RENAME PROCESS HEADER >> TOP	*/
+    div#top {
+        background: #304d35;
+        /* padding-left: 200px; */
+        position: relative;
+        min-height: 110px; /* Add this line to set a minimum height for the header */
+        border: 2px solid red;
+        
+            width: 100%;
+            float: left;
+            padding: 10px;
+    }
 
 
-div#top {
-	background: #304d35;
-    /* padding-left: 200px; */
-    position: relative;
-    min-height: 110px; /* Add this line to set a minimum height for the header */
-	border: 2px solid red;
-	
-		width: 100%;
-		float: left;
-		padding: 10px;
-}
+    div#pan {
+        background: #dae01c;
+        float: left;
+        min-width: 200px;
+        width: 33.33%;
+        margin-left: -100%;
+        border: 2px solid darkgoldenrod;
+    }
 
 
-div#pan {
-    background: #dae01c;
-    float: left;
-    min-width: 200px;
-	width: 33.33%;
-    margin-left: -100%;
-	border: 2px solid darkgoldenrod;
-}
 
-/* slideshow attrib */
-.slideshow .slide {
-    display: none;
-  }
 
-.slideshow .slide-active {
-display: block;
-}  
+/*  SLIDESHOW  REFs --- begin ...  */
+    .slideshow .slide {
+        display: none;
+    }
 
-/*  slide itself hide // see */
-.slide {
-    display: none;
-  }
-  
-.slide-active {
+    .slideshow .slide-active {
     display: block;
-  }
-/* alt  */
-.mySlide {display:none;}
+    }  
+
+    /*  slide itself hide // see */
+    .slide {
+        display: none;
+    }
+    
+    .slide-active {
+        display: block;
+    }
+    /* alt  */
+    .mySlide {display:none;}
   
 
-/* Style for navigation buttons */
-.nav {
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-.nav button {
-    padding: 10px 20px;
-    background-color: #58a848;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }  
+
+
+/* NAV BUTTON  class button tryout --- buttons */
+    .nav {
+        text-align: center;
+        margin-top: 10px;
+    }
+    
+    .nav button {
+        padding: 10px 20px;
+        background-color: #58a848;
+        color: white;
+        border: none;
+        cursor: pointer;
+    }  
 /* ... your existing CSS rules ... */
 
 
-/* Header Styles */
-div#header {
-	background: #304d35;
-    /* padding-left: 200px; */
-    /* position: relative; */
-    min-height: 100px; /* Add this line to set a minimum height for the header */
-	border: 2px solid red;
-}
+
+/*  Header  BOX --- Styles */
+    div#header {
+        background: #304d35;
+        /* padding-left: 200px; */
+        /* position: relative; */
+        min-height: 100px; /* Add this line to set a minimum height for the header */
+        border: 2px solid red;
+    }
+
+    div#header-pic { 
+        position: absolute;
+        right: 10px;
+        background: #58a848;
+        float: left; 
+        /* width: 200px;  */
+        /* margin-left: - 100%; */
+        border: 2px solid darkgoldenrod; 
+        
+    }
 
 
-div#header-pic { 
-	position: absolute;
-	right: 10px;
-	background: #58a848;
-	float: left; 
-	/* width: 200px;  */
-	/* margin-left: - 100%; */
-	border: 2px solid darkgoldenrod; 
-	
-}
+    div#header-name {
+        position: absolute;
+        height: 60px;
+        /* height: 80px; */
+        left: 200px;
+        /* padding-left: 200px; */
+        margin: 0;
+        background: #304d35;
+        color: #dff5f1;
+        /* border: 2px solid orange; */
+    }	
 
-
-div#header-name {
-	position: absolute;
-	height: 60px;
-	/* height: 80px; */
-	left: 200px;
-	/* padding-left: 200px; */
-	margin: 0;
-	background: #304d35;
-	color: #dff5f1;
-	/* border: 2px solid orange; */
-}	
 
 
 /* Coordinates Box Styles */
-div#coords{
-    position: absolute;
-    float: right; 
-    top: 60px;
-    right: 10px;
-    /* background-color: #147FA9; */
-    color: #fff;
-    padding: 5px 10px;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: Arial, sans-serif;
-    border-radius: 5px;
-	/* border: 2px solid pink; */
-    /* Hériter des propriétés du header */
-    /* min-height: inherit;
-    padding-left: inherit; */
-}
+    div#coords{
+        position: absolute;
+        float: right; 
+        top: 60px;
+        right: 10px;
+        /* background-color: #147FA9; */
+        color: #fff;
+        padding: 5px 10px;
+        font-size: 16px;
+        font-weight: bold;
+        font-family: Arial, sans-serif;
+        border-radius: 5px;
+        /* border: 2px solid pink; */
+        /* Hériter des propriétés du header */
+        /* min-height: inherit;
+        padding-left: inherit; */
+    }
 
-div#coords ul  li {
-    font-weight: 30;
-    padding-right: 10px;
-    line-height: 1;
-    border: 2px solid rgb(63, 206, 175);
-}
-div#coords a {
-    list-style: none;
-    text-decoration: none; 
-    color: #fff;
-    /* font-weight: 30;
-    padding-right: 10px;
-    line-height: 1; */
-    border: 2px solid rgb(130, 36, 92);
-}
+    div#coords ul  li {
+        font-weight: 30;
+        padding-right: 10px;
+        line-height: 1;
+        border: 2px solid rgb(63, 206, 175);
+    }
+    div#coords a {
+        list-style: none;
+        text-decoration: none; 
+        color: #fff;
+        /* font-weight: 30;
+        padding-right: 10px;
+        line-height: 1; */
+        border: 2px solid rgb(130, 36, 92);
+    }
 
 
-div#header a {
-    list-style: none;
-	/* position: absolute;
-	right: 0;
-	top: 23px;
-	padding: 10px;*/
-	color: rgb(16, 48, 28); 
-}
+    div#header a {
+        list-style: none;
+        /* position: absolute;
+        right: 0;
+        top: 23px;
+        padding: 10px;*/
+        color: rgb(16, 48, 28); 
+    }
 
-/* 
-	Header END
-*/
-
-/* .mySlide {
-    display: none;
-} */
 
 
 /* Navigation Styles */
-div#navigation {
-    background: #58a848;
-    float: left;
-    width: 200px;
-    margin-left: -100%;
-	border: 2px solid darkgoldenrod;
-}
+    div#navigation {
+        background: #58a848;
+        float: left;
+        width: 200px;
+        margin-left: -100%;
+        border: 2px solid darkgoldenrod;
+    }
 
-div#navigation li {
-    list-style: none;
-}
+    div#navigation li {
+        list-style: none;
+    }
 
-div#navigation img {
-    padding: 20px;
-}
+    div#navigation img {
+        padding: 20px;
+    }
+
+
 
 /* Footer Styles */
-div#footer {
-    background: #575a65;
-    color: #d8cdcd;
-}
+    div#footer {
+        background: #575a65;
+        color: #d8cdcd;
+    }
 
-div#footer p {
-    padding: 20px 10px;
-}
+    div#footer p {
+        padding: 20px 10px;
+    }
+
+
 
 /* Specific Styles */
             /*  wrapper enable body to stand together */
-div#wrapper {
-    float: left;
-    width: 100%;
-}
+    div#wrapper {
+        float: left;
+        width: 100%;
+    }
 
-div#spec {
-    font-family: courier;
-    font-size: 160%;
-    color: red;
-}
+    div#spec {
+        font-family: courier;
+        font-size: 160%;
+        color: red;
+    }
 
-div#content {
-    margin-left: 200px;
-    overflow: auto;
-    max-height: calc(100vh - 60px);
-	border: 2px solid blue;
-}
 
-div#content p {
-    margin-left: 60px;
-    padding: 0 10px;
-    line-height: 1.8;
-}
 
-div#pli {
-    margin-left: 80px;
-    font-weight: bold;
-    /* padding: 0 10px; */
-    line-height: 1;
-    font-size: 12px;
-}
+/* CONTENT --- should be container --- */
+    div#content {
+        margin-left: 200px;
+        overflow: auto;
+        max-height: calc(100vh - 60px);
+        border: 2px solid blue;
+    }
 
-div#extra {
-    background: #4f5250;
-    clear: left;
-    width: 100%;
-    color: rgb(250, 252, 250);
-	border: 2px solid yellow;
-}
+    div#content p {
+        margin-left: 60px;
+        padding: 0 10px;
+        line-height: 1.8;
+    }
 
-div#menu {
-    background: #caccd5;
-    color: #147FA9;
-	border: 2px solid purple;
+
+    /*  ESSAIES /// <p> <li>  */
+    div#pli {
+        margin-left: 80px;
+        font-weight: bold;
+        /* padding: 0 10px; */
+        line-height: 1;
+        font-size: 12px;
+    }
+
+
+    /*  should disapeer */
+    div#extra {
+        background: #4f5250;
+        clear: left;
+        width: 100%;
+        color: rgb(250, 252, 250);
+        border: 2px solid yellow;
+    }
+
+
+/*  Pages  Main Guides  */
+    div#menu {
+        background: #caccd5;
+        color: #147FA9;
+        border: 2px solid purple;
 }
