--- a/pages/styles/init.css
+++ b/pages/styles/init.css
@@ -1,11 +1,12 @@
 /* General Styles */
 
 	/* Reset default margin and padding */
-html, body {
-    margin: 0;
-    padding: 0;
-    max-width: 1024px;
-}
+    html, body {
+        margin: 0;
+        padding: 0;
+        max-width: 1024px;
+        min-width: 370px;
+    }
 
 /* MAIN BODY  */
 /* Common text styles */
@@ -37,14 +38,6 @@ html, body {
         padding: 5px 20px;
         margin: 10;
     }
-    /* Background Image */
-    div#filig {
-        background-image: url('img_hello_world.jpeg');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 100% 50%;
-    }
-
 
 
 /* 			RENAME PROCESS HEADER >> TOP	*/
