fitting name box to stay inside

--- a/pages/styles/init.css
+++ b/pages/styles/init.css
@@ -1,6 +1,7 @@
+
 /* General Styles */
 
-	/* Reset default margin and padding */
+/* Reset default margin and padding */
     html, body {
         margin: 0;
         padding: 0;
@@ -8,14 +9,10 @@
         min-width: 370px;
     }
 
-/* MAIN BODY  */
-/* Common text styles */
-
     body {
         color: #161212;
         font: 90% Roboto, Arial, sans-serif;
         font-weight: 300;
-        
     }
 
     p {
@@ -39,20 +36,18 @@
         margin: 10;
     }
 
-
-/* 			RENAME PROCESS HEADER >> TOP	*/
+/* - = = = - - = = = - - = = = - - = = = - */
+/*  spec divs */
     div#top {
         background: #304d35;
         /* padding-left: 200px; */
         position: relative;
-        min-height: 110px; /* Add this line to set a minimum height for the header */
+        min-height: 110px;
         border: 2px solid red;
-        
-            width: 100%;
-            float: left;
-            padding: 10px;
+        width: 100%;
+        float: left;
+        /* padding: 10px; */
     }
-
 
     div#pan {
         background: #dae01c;
@@ -64,89 +59,62 @@
     }
 
 
-
-
-/*  SLIDESHOW  REFs --- begin ...  */
-    .slideshow .slide {
-        display: none;
-    }
-
-    .slideshow .slide-active {
-    display: block;
-    }  
-
-    /*  slide itself hide // see */
-    .slide {
-        display: none;
-    }
-    
-    .slide-active {
-        display: block;
-    }
-    /* alt  */
-    .mySlide {display:none;}
-  
-
-
-
-/* NAV BUTTON  class button tryout --- buttons */
+/* NAV BUTTON class button tryout --- buttons */
     .nav {
         text-align: center;
         margin-top: 10px;
     }
-    
+
     .nav button {
         padding: 10px 20px;
         background-color: #58a848;
         color: white;
         border: none;
         cursor: pointer;
-    }  
-/* ... your existing CSS rules ... */
+    }
 
 
+/* - = = = - - = = = - - = = = - - = = = - */
 
-/*  Header  BOX --- Styles */
+/* Header BOX --- Styles */
     div#header {
         background: #304d35;
         /* padding-left: 200px; */
-        /* position: relative; */
-        min-height: 100px; /* Add this line to set a minimum height for the header */
+        position: relative;
+        min-height: 100px; 
         border: 2px solid red;
     }
 
-    div#header-pic { 
-        position: absolute;
-        right: 10px;
+    div#header-pic {
+        position: relative;
+        /* right: 10px; */
         background: #58a848;
-        float: left; 
-        /* width: 200px;  */
+        float: left;
+        width: 190px; 
         /* margin-left: - 100%; */
-        border: 2px solid darkgoldenrod; 
-        
+        border: 2px solid rgb(120, 236, 157);
     }
 
-
     div#header-name {
-        position: absolute;
+        position: relative;
         height: 60px;
         /* height: 80px; */
-        left: 200px;
-        /* padding-left: 200px; */
-        margin: 0;
+        /* left: 10px; */
+        float: left;
+        /* padding-left: 15px; */
+        width: 45%;
+        margin: 10px;
         background: #304d35;
         color: #dff5f1;
-        /* border: 2px solid orange; */
-    }	
+        border: 2px solid orange;
+    }
 
-
-
-/* Coordinates Box Styles */
-    div#coords{
-        position: absolute;
-        float: right; 
-        top: 60px;
-        right: 10px;
+    /* Coordinates Box Styles */
+    div#coords {
+        position: relative;
+        float: right;
+        /* top: 60px; */
+        /* right: 10px; */
         /* background-color: #147FA9; */
         color: #fff;
         padding: 5px 10px;
@@ -157,18 +125,19 @@
         /* border: 2px solid pink; */
         /* Hériter des propriétés du header */
         min-height: inherit;
-        padding-left: inherit; 
+        padding-left: inherit;
     }
 
-    div#coords ul  li {
+    div#coords ul li {
         font-weight: 30;
         padding-right: 10px;
         line-height: 1;
         border: 2px solid rgb(63, 206, 175);
     }
+
     div#coords a {
         list-style: none;
-        text-decoration: none; 
+        text-decoration: none;
         color: #fff;
         /* font-weight: 30;
         padding-right: 10px;
@@ -176,102 +145,128 @@
         border: 2px solid rgb(130, 36, 92);
     }
 
-
     div#header a {
         list-style: none;
         /* position: absolute;
         right: 0;
         top: 23px;
         padding: 10px;*/
-        color: rgb(16, 48, 28); 
+        /* color: rgb(16, 48, 28); */
+        list-style: none;
+        text-decoration: none;
+        color: #fff;
+        border: 2px solid rgb(109, 10, 69);
     }
 
-
+/* - = = = - - = = = - - = = = - - = = = - */
 
 /* Navigation Styles */
-    div#navigation {
-        background: #58a848;
-        float: left;
-        width: 200px;
-        margin-left: -100%;
-        border: 2px solid darkgoldenrod;
-    }
+div#navigation {
+    background: #58a848;
+    float: left;
+    width: 200px;
+    margin-left: -100%;
+    /* border: 2px solid darkgoldenrod; */
+}
 
-    div#navigation li {
-        list-style: none;
-    }
+div#navigation li {
+    list-style: none;
+    margin-left: 10px;
+}
 
-    div#navigation img {
-        padding: 20px;
-    }
-
-
+div#navigation img {
+    padding: 10px;
+}
 
 /* Footer Styles */
-    div#footer {
-        background: #575a65;
-        color: #d8cdcd;
-    }
+div#footer {
+    background: #575a65;
+    color: #d8cdcd;
+}
 
-    div#footer p {
-        padding: 20px 10px;
-    }
+div#footer p {
+    padding: 20px 10px;
+}
+/* - = = = - - = = = - - = = = - - = = = - */
 
+/* wrapper enable body to stand together */
+div#wrapper {
+    float: left;
+    width: 100%;
+}
 
+div#spec {
+    font-family: courier;
+    font-size: 160%;
+    color: red;
+}
 
-/* Specific Styles */
-            /*  wrapper enable body to stand together */
-    div#wrapper {
-        float: left;
-        width: 100%;
-    }
+div#content {
+    margin-left: 200px;
+    overflow: auto;
+    max-height: calc(100vh - 60px);
+    border: 2px solid blue;
+}
 
-    div#spec {
-        font-family: courier;
-        font-size: 160%;
-        color: red;
-    }
+div#content p {
+    margin-left: 60px;
+    padding: 0 10px;
+    line-height: 1.8;
+}
 
+div#pli {
+    margin-left: 80px;
+    font-weight: bold;
+    /* padding: 0 10px; */
+    line-height: 1;
+    font-size: 12px;
+}
 
+div#extra {
+    background: #4f5250;
+    clear: left;
+    width: 100%;
+    color: rgb(250, 252, 250);
+    border: 2px solid yellow;
+}
 
-/* CONTENT --- should be container --- */
-    div#content {
-        margin-left: 200px;
-        overflow: auto;
-        max-height: calc(100vh - 60px);
-        border: 2px solid blue;
-    }
-
-    div#content p {
-        margin-left: 60px;
-        padding: 0 10px;
-        line-height: 1.8;
-    }
-
-
-    /*  ESSAIES /// <p> <li>  */
-    div#pli {
-        margin-left: 80px;
-        font-weight: bold;
-        /* padding: 0 10px; */
-        line-height: 1;
-        font-size: 12px;
-    }
-
-
-    /*  should disapeer */
-    div#extra {
-        background: #4f5250;
-        clear: left;
-        width: 100%;
-        color: rgb(250, 252, 250);
-        border: 2px solid yellow;
-    }
+div#menu {
+    background: #caccd5;
+    color: #147FA9;
+    border: 2px solid purple;
+}
 
 
-/*  Pages  Main Guides  */
-    div#menu {
-        background: #caccd5;
-        color: #147FA9;
-        border: 2px solid purple;
+/* SLIDESHOW REFs --- begin ... */
+.slideshow .slide {
+    display: none;
+}
+.slideshow .slide-active {
+    display: block;
+}
+/* slide itself hide // see */
+.slide {
+    display: none;
+}
+.slide-active {
+    display: block;
+}
+.mySlide {display:none;}
+
+/* Custom Styles from slideshow.css */
+.slideshow .slide {
+    display: none;
+}
+
+.slideshow .slide-active {
+    display: block;
+}
+
+#aptitude {
+    font-size: 24px; 
+}
+
+#star1, #star2, #star3, #star4, #star5 {
+    color: gold; /* Couleur de l'étoile */
+    /* background: hwb(59 0% 0%); */
 }
