--- a/pages/styles/init_color1.css
+++ b/pages/styles/init_color1.css
@@ -92,8 +92,8 @@
         position: relative;
         height: 60px;
         /* height: 80px; */
-        left: 10px;
-        float: left;
+        /* left: 10px; */
+        /* float: left; */
         /* padding-left: 15px; */
         width: 220px;
         /* margin: 10px; */
