--- a/pages/main/basic.css
+++ b/pages/main/basic.css
@@ -71,7 +71,7 @@
         position: relative;
         background: #4d5d68;
         /* padding-left: 15px; */
-        width: 35%;
+        width: 33%;
         float: left;
         height: 1024px;
         /* border: 2px solid rgb(32, 54, 200); */
@@ -82,7 +82,7 @@
         position: relative;
         background: #d8dce1;
         
-        width: 65%;
+        width: 67%;
         float: right;
         height: 1024px;
         /* border: 2px solid rgb(93, 214, 56); */
@@ -96,8 +96,8 @@ div#stag {
     /* position: absolute; */
     /* background: #eceff4; */
     color: #fff;
-    font-size: 15px;
-    /* padding-left: 15px; */
+    font-size: 12px;
+    padding-left: 12px;
 
     /* border: 2px solid rgb(200, 32, 169); */
 }
@@ -127,13 +127,7 @@ div#pic {
 }
 
 
-.about {
-    position: relative;
-    /* position: absolute; */
-    background: #5c6b76;
-    height: 200px;
-    /* border: 1px solid rgb(229, 229, 68); */
-}
+
 
 .contact {
     position: relative;
@@ -145,7 +139,9 @@ div#pic {
 }
 .contact li {
     list-style: none;
+    
 }
+
 .comp {
     position: relative;
     /* float: left; */
@@ -154,9 +150,24 @@ div#pic {
     /* margin-right: auto; */
     padding-bottom: 4px;
     line-height: 2;
-
 }
 
+/** Change la couleur de fond et la couleur du texte lors du survol */
+.element:hover {
+    background-color: #333a3f;
+    color: #9e8888;
+    transition: 0.3s;
+  }
+
+  /* Ajoute une ombre portée à l'élément */
+.element {
+    transition: 0.3s;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  }
+
+
+
+  
 
 .skill {
     position: relative;
@@ -177,18 +188,40 @@ div#pic {
 /* - = = = - - = = = - - = = = - - = = = - */
 /*  MAIN  DIVS */
 
-.name {
+div#name {
     position: relative;
     background: #c6ccd4;
-    height: 75px;
+    float:none; 
+    margin-left: 5%; 
+    /* margin-right: 20%; */
+    height: 50px;
+    font-size: 36px;
     /* border: 1px solid rgb(150, 76, 7); */
 }
 
 .job {
     position: relative;
     background: #c6ccd4;
+    margin-left: 35%; 
+    font-size: 28px;
     height: 50px;
     /* border: 1px solid rgb(150, 76, 7); */
+}
+
+div#about {
+    position: relative;
+    /* position: absolute; */
+
+    background: #c6ccd4;
+    margin-left: 5%; 
+    font-size: 12px;
+    
+    height: 200px;
+    /* border: 1px solid rgb(229, 229, 68); */
+}
+div#about p {
+    font-size: 14px;    
+
 }
 
 .obj {
